Login action implemented

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
         restart: always
         container_name: "mysql"
         volumes:
-            - ./mysql:/var/lib/mysql
+            - mysql_data:/var/lib/mysql
         ports:
             - 3306:3306
         environment:
@@ -13,3 +13,7 @@ services:
             - MYSQL_DATABASE=user
             - MYSQL_USER=user
             - MYSQL_PASSWORD=change_this
+
+volumes:
+  mysql_data:
+    driver: local
